; ModuleID = '/home/carl/AnghaBench/kphp-kdb/news/extr_news-import-dump.c_eat_whitespaces.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/news/extr_news-import-dump.c_eat_whitespaces.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@rptr = common dso_local global i32* null, align 8
@rend = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @eat_whitespaces() #0 {
  br label %1

1:                                                ; preds = %0, %17
  %2 = load i32*, i32** @rptr, align 8
  %3 = load i32*, i32** @rend, align 8
  %4 = icmp eq i32* %2, %3
  br i1 %4, label %5, label %12

5:                                                ; preds = %1
  %6 = call i32 (...) @advance_buff()
  %7 = load i32*, i32** @rptr, align 8
  %8 = load i32*, i32** @rend, align 8
  %9 = icmp eq i32* %7, %8
  br i1 %9, label %10, label %11

10:                                               ; preds = %5
  br label %20

11:                                               ; preds = %5
  br label %12

12:                                               ; preds = %11, %1
  %13 = load i32*, i32** @rptr, align 8
  %14 = load i32, i32* %13, align 4
  %15 = icmp sgt i32 %14, 32
  br i1 %15, label %16, label %17

16:                                               ; preds = %12
  br label %20

17:                                               ; preds = %12
  %18 = load i32*, i32** @rptr, align 8
  %19 = getelementptr inbounds i32, i32* %18, i32 1
  store i32* %19, i32** @rptr, align 8
  br label %1

20:                                               ; preds = %10, %16
  ret void
}

declare dso_local i32 @advance_buff(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
